@@ -1,3 +1,10 @@
+2016-07-08  Cesar Philippidis  <cesar@codesourcery.com>
+
+	Backport from trunk:
+	2016-07-08  Cesar Philippidis  <cesar@codesourcery.com>
+
+	* gfortran.dg/goacc/pr71704.f90: New test.
+
 2016-07-08  Martin Liska  <mliska@suse.cz>
 
 	Backported from mainline
